k8s/gateway/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
  namespace: gateway
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.k8s.szp.io"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: k8s-cert
      allowedRoutes:
        namespaces:
          from: All
    # ArgoCD TLS passthrough
    - name: argocd
      protocol: TLS
      port: 443
      hostname: argocd.szp15.com
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
    # Vault TLS Passthrough
    - name: vault
      protocol: TLS
      port: 443
      hostname: vault.szp15.com
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: openbao
    - name: vault-public
      protocol: TLS
      port: 442
      hostname: vault.szp15.com
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: openbao
    # Whoami TLS Terminate (available to public)
    - name: whoami
      protocol: HTTPS
      port: 443
      hostname: whoami.szp15.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: whoami-cert
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: whoami
    - name: whoami-public
      protocol: HTTPS
      port: 442
      hostname: whoami.szp15.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: whoami-cert
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: whoami
    # Objectstore TLS Terminate
    - name: rgw
      protocol: HTTPS
      port: 443
      hostname: s3.szp15.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: objectstore-cert
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: rook-ceph
    - name: rgw-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.s3.szp15.com"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: objectstore-cert
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: rook-ceph
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.112.10.100
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: default-config
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: default-config
  namespace: gateway
spec:
  provider:
    type: Kubernetes
    kubernetes:
      envoyDeployment:
        replicas: 3
        strategy:
          type: RollingUpdate
          rollingUpdate:
            # since we have only 3 nodes, we can't surge more
            maxSurge: 0
            maxUnavailable: 25%
        pod:
          affinity:
            podAntiAffinity:
              requiredDuringSchedulingIgnoredDuringExecution:
                - topologyKey: kubernetes.io/hostname
                  labelSelector:
                    matchLabels:
                      app.kubernetes.io/name: envoy
                      app.kubernetes.io/component: proxy
                      gateway.envoyproxy.io/owning-gateway-name: default
                      gateway.envoyproxy.io/owning-gateway-namespace: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: gateway
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: proxy-protocol-policy
  namespace: gateway
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      sectionName: whoami-public
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      sectionName: vault-public
  enableProxyProtocol: true
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gateway-policy
  namespace: envoy-gateway-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      gateway.envoyproxy.io/owning-gateway-name: default
      gateway.envoyproxy.io/owning-gateway-namespace: gateway
  ingress:
    - fromEntities:
        - all
      toPorts:
        - ports:
            - port: "10080"
              protocol: TCP
            - port: "10443"
              protocol: TCP
    # TODO: we should add output nft rules to restrict only haproxy can use 442 port
    - fromCIDR:
        - 10.112.34.2/32
      toPorts:
        - ports:
            - port: "10442"
              protocol: TCP
