k8s/gateway/proxy-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  name: cilium-proxy-gateway-gateway
  namespace: gateway
  annotations:
    cec.cilium.io/use-original-source-address: "false"
spec:
  backendServices:
    - name: whoami
      namespace: whoami
      number:
        - "80"
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      filterChains:
        - filterChainMatch:
            serverNames:
              - whoami.szp15.com
            transportProtocol: tls
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                commonHttpProtocolOptions:
                  maxStreamDuration: 0s
                httpFilters:
                  - name: envoy.filters.http.grpc_web
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.grpc_stats
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                      emitFilterState: true
                      enableUpstreamStats: true
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                internalAddressConfig:
                  cidrRanges:
                    - addressPrefix: 10.0.0.0
                      prefixLen: 8
                    - addressPrefix: 172.16.0.0
                      prefixLen: 12
                    - addressPrefix: 192.168.0.0
                      prefixLen: 16
                    - addressPrefix: 127.0.0.1
                      prefixLen: 32
                rds:
                  routeConfigName: listener-secure
                statPrefix: listener-secure
                streamIdleTimeout: 300s
                upgradeConfigs:
                  - upgradeType: websocket
                useRemoteAddress: true
          transportSocket:
            name: envoy.transport_sockets.tls
            typedConfig:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              commonTlsContext:
                alpnProtocols:
                  - h2,http/1.1
                tlsCertificateSdsSecretConfigs:
                  - name: cilium-secrets/gateway-whoami-cert
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: listener
      socketOptions:
        - description: Enable TCP keep-alive (default to enabled)
          intValue: "1"
          level: "1"
          name: "9"
        - description: TCP keep-alive idle time (in seconds) (defaults to 10s)
          intValue: "10"
          level: "6"
          name: "4"
        - description: TCP keep-alive probe intervals (in seconds) (defaults to 5s)
          intValue: "5"
          level: "6"
          name: "5"
        - description: TCP keep-alive probe max failures.
          intValue: "10"
          level: "6"
          name: "6"
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: listener-secure
      virtualHosts:
        - domains:
            - whoami.szp15.com
            - whoami.szp15.com:*
          name: whoami.szp15.com
          routes:
            - match:
                prefix: /
              route:
                cluster: whoami:whoami:80
                maxStreamDuration:
                  maxStreamDuration: 0s
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      edsClusterConfig:
        serviceName: whoami/whoami:80
      name: whoami:whoami:80
      outlierDetection:
        splitExternalLocalOriginErrors: true
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            idleTimeout: 60s
          explicitHttpConfig:
            httpProtocolOptions: {}
  services:
    - listener: ""
      name: cilium-proxy-gateway-gateway
      namespace: gateway
      ports:
        - 442
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-proxy-gateway-gateway
  namespace: gateway
  annotations:
    lbipam.cilium.io/ips: 10.112.10.100
    lbipam.cilium.io/sharing-key: proxy-gateway
spec:
  ports:
    - name: port-442
      port: 442
      protocol: TCP
      targetPort: 442
  type: LoadBalancer
